@@ -1,6 +1,9 @@
 Changes from jTDS 1.2.6
 =======================
 
+08/22/2012 - Holger Rehn
+ o Applied patch #111 adding Kerberos support, provided by Tepper Tong.
+
 08/17/2012 - Holger Rehn
  o Added service provider configuration file for JDBC driver class (Bug #659).
  o Added missing JDBC 4.1 method stubs.
@@ -12,7 +15,7 @@ Changes from jTDS 1.2.6
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ||                                                                           ||
 ||                      SourceForge Project Upgrade                          ||
-||																			 ||
+||                                                                           ||
 || The previous tracker item IDs have been replaced by individual bug/patch  ||
 || IDs and are no longer valid.                                              ||
 ||                                                                           ||
